--- a/src/Host/Host.csproj
+++ b/src/Host/Host.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
